# vst-wrapper

./: .gitignore  CMakeLists.txt  README.md
HelperLegacy/: CMakeLists.txt
Source/: AvailabilityVersionCheckShim.cpp  BridgeProtocol.h  HelperMain.cpp  SmokeHostMain.cpp  WrapperPlugin.cpp  WrapperPlugin.h
scripts/: package_release.sh
